--- a/src/pages/Initial.css
+++ b/src/pages/Initial.css
@@ -41,6 +41,7 @@
     color: rgba(255, 255, 255, 0.7);
   }
   .initial-page {
+    overflow-y: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
