--- a/src/components/ChannelList.css
+++ b/src/components/ChannelList.css
@@ -14,12 +14,12 @@
 .channel-list-container.expanded {
     border-radius: 20px;
     width: 85%;
-    height: auto;
-    padding: 20px;
+    height: fit-content;
+
     background-color: rgba(30, 30, 30, 0.9);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
-    margin: 20px 0;
+
     text-align: center;
 }
 
@@ -65,6 +65,7 @@
     justify-content: center;
     padding: 10px;
     margin: 0 15px;
+    margin-top: 0.5rem;
     text-align: center;
 }
 
